ci: update target name

--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -18,39 +18,39 @@ jobs:
               "name": "x86 multiboot (no SMP)",
               "arch": "x86",
               "target_triple": "i686-elf",
-              "target": "multiboot",
+              "target": "mos_multiboot",
               "has_smp": "OFF",
             }
           - {
               "name": "x86 multiboot with SMP (1 core)",
               "arch": "x86",
               "target_triple": "i686-elf",
-              "target": "multiboot",
+              "target": "mos_multiboot",
               "has_smp": "ON",
               "smp": "1",
             }
-          - {
-              "name": "x86_64 UEFI (no SMP)",
-              "arch": "x86_64",
-              "target_triple": "x86_64-elf",
-              "target": "mos_uefi_entry",
-              "has_smp": "OFF",
-              "compile_only": "ON", # we don't have a working platform support for now
-            }
-          - {
-              "name": "x86_64 UEFI with SMP (1 core)",
-              "arch": "x86_64",
-              "target_triple": "x86_64-elf",
-              "target": "mos_uefi_entry",
-              "has_smp": "ON",
-              "smp": "1",
-              "compile_only": "ON",
-            }
+          #   - {
+          #       "name": "x86_64 UEFI (no SMP)",
+          #       "arch": "x86_64",
+          #       "target_triple": "x86_64-elf",
+          #       "target": "mos_uefi_entry",
+          #       "has_smp": "OFF",
+          #       "compile_only": "ON", # we don't have a working platform support for now
+          #     }
+          #   - {
+          #       "name": "x86_64 UEFI with SMP (1 core)",
+          #       "arch": "x86_64",
+          #       "target_triple": "x86_64-elf",
+          #       "target": "mos_uefi_entry",
+          #       "has_smp": "ON",
+          #       "smp": "1",
+          #       "compile_only": "ON",
+          #     }
           - {
               "name": "x86_64 limine (no SMP)",
               "arch": "x86_64",
               "target_triple": "x86_64-elf",
-              "target": "mos_limine_entry",
+              "target": "mos_limine",
               "has_smp": "OFF",
               "compile_only": "ON",
             }
@@ -58,7 +58,7 @@ jobs:
               "name": "x86_64 limine with SMP (1 core)",
               "arch": "x86_64",
               "target_triple": "x86_64-elf",
-              "target": "mos_limine_entry",
+              "target": "mos_limine",
               "has_smp": "ON",
               "smp": "1",
               "compile_only": "ON",
