--- a/arch/x86/boot/multiboot/CMakeLists.txt
+++ b/arch/x86/boot/multiboot/CMakeLists.txt
@@ -8,6 +8,7 @@ create_bootable_kernel_binary(
     FILENAME
         multiboot.bin
     SOURCES
+        multiboot_entry.c
         multiboot.asm
         startup.c
 )
