--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -35,6 +35,17 @@
             }
         },
         {
+            "label": "compile_mos_limine",
+            "type": "shell",
+            "options": { "cwd": "${workspaceFolder}/build" },
+            "command": "cmake --build ${workspaceFolder}/build --target mos_limine_iso",
+            "group": "build",
+            "presentation": {
+                "reveal": "silent",
+                // "close": true
+            }
+        },
+        {
             "label": "kill_mos",
             "type": "shell",
             "command": "tmux kill-session -t mos_kernel_debug || true",
@@ -86,6 +97,51 @@
             "dependsOn": [
                 "kill_mos",
                 "compile"
+            ],
+            "presentation": {
+                "reveal": "silent",
+                "close": true
+            },
+            "detail": "Start MOS and wait for the debugger to connect."
+        },
+
+        {
+            "label": "start_os_x86_64",
+            "type": "process",
+            "command": "tmux",
+            "options": {
+                "cwd": "${workspaceFolder}/build",
+            },
+            "args": [
+                "new",
+                "-s",
+                "mos_kernel_debug",
+                "-d",
+                "qemu-system-x86_64",
+                "-m",
+                "32G",
+                "-display",
+                "gtk,show-tabs=on",
+                "-d",
+                "int,cpu_reset,guest_errors",
+                "-D",
+                "qemu_err.log",
+                "-s",
+                "-S",
+                "-chardev",
+                "stdio,id=serial_log,logfile=serial_log.log,signal=off",
+                "-serial",
+                "chardev:serial_log",
+                "-cdrom",
+                "${workspaceFolder}/build/boot.dir/mos_limine.iso",
+                "-smp",
+                "1",
+            ],
+            "problemMatcher": [ ],
+            "group": "none",
+            "dependsOn": [
+                "kill_mos",
+                "compile_mos_limine"
             ],
             "presentation": {
                 "reveal": "silent",
