--- a/arch/x86/boot/limine/CMakeLists.txt
+++ b/arch/x86/boot/limine/CMakeLists.txt
@@ -19,11 +19,11 @@ endif()
 
 list(APPEND CMAKE_PROGRAM_PATH ${LIMINE_ROOT}/bin)
 
-find_program(LIMINE_DEPLOY limine-deploy NO_CACHE)
+find_program(LIMINE_BIN limine NO_CACHE)
 find_program(XORRISO xorriso NO_CACHE)
 
-if (NOT LIMINE_DEPLOY OR NOT XORRISO)
-    message(WARNING "limine-deploy and xorriso are required to build the limine ISO")
+if (NOT LIMINE_BIN OR NOT XORRISO)
+    message(WARNING "limine and xorriso are required to build the limine ISO")
     return()
 endif()
 
@@ -33,18 +33,20 @@ set(LIMINE_BOOT_DIR ${CMAKE_BINARY_DIR}/boot.dir/iso_root/limine)
 add_custom_command(
     OUTPUT ${BOOT_DIR}/mos_limine.iso
     COMMAND mkdir -p ${LIMINE_BOOT_DIR}
-    COMMAND cp ${LIMINE_ROOT}/limine.sys ${LIMINE_ROOT}/limine-cd.bin ${LIMINE_BOOT_DIR}/
+    COMMAND cp ${LIMINE_ROOT}/limine-bios.sys ${LIMINE_ROOT}/limine-bios-cd.bin ${LIMINE_BOOT_DIR}/
     COMMAND cp $<TARGET_FILE:mos_limine> ${CMAKE_BINARY_DIR}/initrd.cpio ${CMAKE_CURRENT_LIST_DIR}/limine.cfg ${LIMINE_BOOT_DIR}/
-    COMMAND ${XORRISO} -as mkisofs -b limine-cd.bin -no-emul-boot -boot-load-size 4 -boot-info-table --protective-msdos-label ${LIMINE_BOOT_DIR} -o ${BOOT_DIR}/mos_limine.iso
-    COMMAND ${LIMINE_DEPLOY} ${BOOT_DIR}/mos_limine.iso
+    COMMAND ${XORRISO} -as mkisofs -b limine-bios-cd.bin -no-emul-boot -boot-load-size 4 -boot-info-table --protective-msdos-label ${LIMINE_BOOT_DIR} -o ${BOOT_DIR}/mos_limine.iso
+    COMMAND ${LIMINE_BIN} bios-install ${BOOT_DIR}/mos_limine.iso
     DEPENDS
         mos_limine
         mos_initrd
         limine.cfg
+        ${LIMINE_ROOT}/limine-bios.sys
+        ${LIMINE_ROOT}/limine-bios-cd.bin
     VERBATIM
     BYPRODUCTS
-        ${LIMINE_BOOT_DIR}/limine.sys
-        ${LIMINE_BOOT_DIR}/limine-cd.bin
+        ${LIMINE_BOOT_DIR}/limine-bios.sys
+        ${LIMINE_BOOT_DIR}/limine-bios-cd.bin
         ${LIMINE_BOOT_DIR}/limine_entry.elf
         ${LIMINE_BOOT_DIR}/initrd.cpio
         ${LIMINE_BOOT_DIR}/limine.cfg
