--- a/.github/workflows/code-browser.yml
+++ b/.github/workflows/code-browser.yml
@@ -23,12 +23,12 @@ jobs:
         run: |
           sudo apt update
           sudo apt remove clang-12 clang-13 llvm-11-dev llvm-12-dev llvm-13-dev
-          sudo apt -y install nasm cpio gcc-i686-linux-gnu g++-i686-linux-gnu ninja-build libclang-14-dev
+          sudo apt -y install nasm cpio ninja-build libclang-14-dev
 
       - name: Download & Extract Cross Compiler
         run: |
-          wget -q "https://github.com/moodyhunter/i686-elf-prebuilt/releases/download/artifact/toolchain-i686-elf.tar.gz"
-          tar -xzf toolchain-i686-elf.tar.gz
+          wget -q "https://github.com/moodyhunter/mos-toolchain-prebuilt/releases/download/artifact/toolchain-x86_64-elf.tar.gz"
+          tar -xzf toolchain-x86_64-elf.tar.gz
           mv toolchain /tmp/
           echo "PATH=$PATH:/tmp/toolchain/bin" >> $GITHUB_ENV
 
@@ -38,7 +38,7 @@ jobs:
           cmake \
             -DCMAKE_BUILD_TYPE=Debug \
             -DBUILD_TESTING=ON \
-            -DMOS_ARCH=x86 \
+            -DMOS_ARCH=x86_64 \
             -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
             -B ${{github.workspace}}/build \
             -G Ninja
@@ -46,7 +46,7 @@ jobs:
       - name: Build
         run: |
           cd ${{github.workspace}}/build
-          ninja mos_multiboot mos_initrd
+          ninja mos_limine mos_initrd
 
       - name: Build CodeBrowser
         run: |
