init: mount /sys on boot

--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -23,6 +23,7 @@ device_manager.path = /initrd/programs/device-manager
 ## Filesystems configuration
 ## The directories are created in the order they are specified in the file.
 mkdir = /ipc
+mkdir = /sys
 
 ## Mount configuration
 ##
@@ -42,3 +43,4 @@ mkdir = /ipc
 ## This is done by the kernel, and cannot be changed in this file.
 ##
 mount = none /ipc ipcfs defaults
+mount = none /sys sysfs defaults
