vsnprintf: support kernel's %p extension

--- a/libs/stdlib/CMakeLists.txt
+++ b/libs/stdlib/CMakeLists.txt
@@ -20,4 +20,7 @@ add_mos_library(
         sync/mutex.c
 )
 
+# special kernel extensions for vsnprintf
+target_sources(stdlib_kernel PRIVATE stdio_kernel_ext.c)
+
 add_dependencies(stdlib mos_syscall_decl) # needs to be generated before we can compile
