--- a/arch/x86_64/boot/limine/CMakeLists.txt
+++ b/arch/x86_64/boot/limine/CMakeLists.txt
@@ -36,9 +36,10 @@ add_custom_target(mos_limine_iso
     COMMAND cp $<TARGET_FILE:mos_limine> ${CMAKE_BINARY_DIR}/initrd.cpio ${CMAKE_CURRENT_LIST_DIR}/limine.cfg ${LIMINE_BOOT_DIR}/
     COMMAND ${XORRISO} -as mkisofs -b limine-bios-cd.bin -no-emul-boot -boot-load-size 4 -boot-info-table --protective-msdos-label ${LIMINE_BOOT_DIR} -o ${BOOT_DIR}/mos_limine.iso
     COMMAND ${LIMINE_BIN} bios-install ${BOOT_DIR}/mos_limine.iso
+    BYPRODUCTS
+        ${BOOT_DIR}/mos_limine.iso
 
     DEPENDS
-        ${BOOT_DIR}/mos_limine.iso
         mos_limine
         mos_initrd
         limine.cfg
