signal: make signal APIs into stdlib

--- a/userspace/libs/CMakeLists.txt
+++ b/userspace/libs/CMakeLists.txt
@@ -9,6 +9,7 @@ target_sources(stdlib PRIVATE
     cxa.c
     sys-stat.c
     fcntl.c
+    signal.c
 )
 
 target_include_directories(stdlib SYSTEM PUBLIC ${CMAKE_SOURCE_DIR}/userspace/include)
