--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -39,15 +39,15 @@ jobs:
               "has_smp": "n",
               "compile_only": "ON",
             }
-          - {
-              "name": "x86_64 limine with SMP (1 core)",
-              "arch": "x86_64",
-              "target_triple": "x86_64-elf",
-              "target": "mos_limine",
-              "has_smp": "y",
-              "smp": "1",
-              "compile_only": "ON",
-            }
+          #   - {
+          #       "name": "x86_64 limine with SMP (1 core)",
+          #       "arch": "x86_64",
+          #       "target_triple": "x86_64-elf",
+          #       "target": "mos_limine",
+          #       "has_smp": "y",
+          #       "smp": "1",
+          #       "compile_only": "ON",
+          #     }
 
     env:
       MOS_TEST_SMP_COUNT: ${{matrix.config.smp}}
