userspace: move device-manager to drivers/

--- a/userspace/drivers/pci-daemon/CMakeLists.txt
+++ b/userspace/drivers/pci-daemon/CMakeLists.txt
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-if (NOT MOS_ARCH STREQUAL "x86")
+if (NOT MOS_ARCH STREQUAL "x86_64")
     return()
 endif()
 
