sysfs: add its own debug switch

--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -129,6 +129,9 @@ config DEBUG_ipi
 config DEBUG_slab
     bool "slab debugging"
 
+config DEBUG_sysfs
+    bool "sysfs debugging"
+
 endmenu
 
 endmenu
