acpi-daemon: initial LAI setup

--- a/userspace/drivers/CMakeLists.txt
+++ b/userspace/drivers/CMakeLists.txt
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
+add_subdirectory(acpi-daemon)
 add_subdirectory(device-manager)
 add_subdirectory(pci-daemon)
