--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -54,6 +54,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: true
 
       - name: Install packages
         run: |
