--- a/.github/workflows/code-browser.yml
+++ b/.github/workflows/code-browser.yml
@@ -18,6 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: true
 
       - name: Install packages
         run: |
