kconfig: add missing debug entries

--- a/configs/x86_64-debug.conf
+++ b/configs/x86_64-debug.conf
@@ -26,6 +26,9 @@ MOS_DEBUG_dcache_ref=y
 MOS_DEBUG_tmpfs=y
 MOS_DEBUG_ipi=y
 MOS_DEBUG_slab=y
+MOS_DEBUG_sysfs=y
+MOS_DEBUG_panic=y
+MOS_DEBUG_signal=y
 MOS_TESTS=y
 MOS_TEST_printf=y
 MOS_TEST_linked_list=y
